--- a/SSA CLR quads 20230327.Rmd
+++ b/SSA CLR quads 20230327.Rmd
@@ -2,7 +2,9 @@
 title: "SSA CLR sw_window 230324"
 author: "Scott Forrest"
 date: "`r Sys.Date()`"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 editor_options: 
   chunk_output_type: inline
 ---
